# ESIPie

./: .editorconfig  .gitignore  LICENSE  README.md  justfile  mise.toml  pyproject.toml
.github/workflows/: release.yaml  test.yaml
docs/: index.md
src/esipie/: __init__.py  config.py
tests/: test_config.py
